fix void under footer when page too small

--- a/src/Application.scss
+++ b/src/Application.scss
@@ -1,6 +1,5 @@
-.website {
-  width: 100%;
-  height: 100%;
+.application {
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
 }
