--- a/src/Content.scss
+++ b/src/Content.scss
@@ -2,6 +2,7 @@
 
 .content {
   margin: 1rem;
+  flex-grow: 1;
   display: flex;
   flex-direction: column;
 
